compiler/fir/analysis-tests/testData/resolve/problems/primaryParameterWithoutNameAndReturnType.kt
data class A(val<!SYNTAX!><!>) {}
